apollo-federation/src/connectors/validation/snapshots/validation_tests@keys_and_entities__invalid__entity_true_returning_scalar.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/keys_and_entities/invalid/entity_true_returning_scalar.graphql
---
[
    Message {
        code: EntityTypeInvalid,
        message: "`@connect(entity: true)` on `Query.name` is invalid. Entity connectors must return object, interface, or union types.",
        locations: [
            8:7..8:19,
        ],
    },
]
