apollo-federation/src/connectors/validation/snapshots/validation_tests@keys_and_entities__invalid__mismatch_batch.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/keys_and_entities/invalid/mismatch_batch.graphql
---
[
    Message {
        code: InvalidBody,
        message: "In `@connect(http: {body:})` on `Product`: `$batch` doesn't have a field named `id`",
        locations: [
            7:59..7:61,
        ],
    },
]
