apollo-federation/src/connectors/validation/snapshots/validation_tests@keys_and_entities__invalid__mismatch_composite_key_batch.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/keys_and_entities/invalid/mismatch_composite_key_batch.graphql
---
[
    Message {
        code: InvalidBody,
        message: "In `@connect(http: {body:})` on `Product`: `$batch.store.country` doesn't have a field named `id`",
        locations: [
            13:41..13:43,
        ],
    },
]
