apollo-federation/src/connectors/validation/snapshots/validation_tests@keys_and_entities__invalid__multiple_keys_not_all_resolved_batch.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/keys_and_entities/invalid/multiple_keys_not_all_resolved_batch.graphql
---
[
    Message {
        code: MissingEntityConnector,
        message: "Entity resolution for `@key(fields: \"id store { id country { key_id region } }\")` on `Product` is not implemented by a connector. See https://go.apollo.dev/connectors/entity-rules",
        locations: [
            8:3..8:60,
        ],
    },
]
